--- a/index.html
+++ b/index.html
@@ -2,8 +2,28 @@
 <html>
 <head>
 	<title>Dodskod-Web page</title>
+	<link rel="stylesheet" type="text/css" href="src/style.css">
+	<meta charset="utf-8">
 </head>
 <body>
-Building....
+
+	<div class=" principal">
+			
+		<div class="info">
+			<center>
+				<label class=" font-effect-anaglyph">Dodskod</label>
+				<a href="https://play.google.com/store/apps/developer?id=Dodskod+apps&hl=es">View Games</a>
+			</center>
+		</div>
+	</div>
+	<footer>
+		<div class="network">
+			<a href="https://www.facebook.com/Dodskod-257971989423165">Facebook</a>
+			<a href="https://www.youtube.com/channel/UCPiaDXCz9AFIjOw05x48uVA">Youtube</a>
+			<a href="#">Twitter</a>
+			<a href="https://www.instagram.com/Dodskod/">Instagram</a>
+		</div>
+
+	</footer>
 </body>
 </html>
